2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaInterp.c (JavaTraceProc,
	Java_tcl_lang_Interp_pkgRequire): Fixup CONST
	usage to cleanup compile with Tcl 8.4.

2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/java.h (JavaWasJavaThreadInit): Add decl.
	* src/native/javaCmd.c (JavaWasJavaThreadInit,
	JavaSetupJava): Add JavaWasJavaThreadInit method.
	* src/native/javaNotifier.c
	(Java_tcl_lang_Notifier_finalizeThreadCheck): Add
	new native method implementaiton that checks
	to see if thread was created in Java and cleans
	up Tcl thread data when last interp is deleted.
	* src/tclblend/tcl/lang/Interp.java (dispose):
	Invoke new Notifier.finalizeThreadCheck() method.
	* src/tclblend/tcl/lang/Notifier.java
	(finalizeThreadCheck): Add native method decl.
	* tests/tclblend/loading.test: Remove useless comments.

2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tests/tclblend/tests/JavaEval.java:
	* src/tests/tclblend/tests/JavaLoadTclBlend.java:
	* src/tests/tclblend/tests/JavaLoadTclBlend2.java:
	* src/tests/tclblend/tests/JavaThreadLoadTclBlend.java:
	Rework tests so that dispose is called from a finally
	block just in case something goes wrong.
	* tests/tclblend/loading.test: Add test that loads
	two Java interpreters into the same Java threads.
	Rename a couple of tests and fixup return values.

2002-07-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/empty/tcl/lang/Interp.java (Interp):
	Throw runtime exception if fake Interp instance
	is accidently created.
	* src/tcljava/tcl/lang/BlendExtension.java (init):
	Raise runtime exception if init method is
	invoked twice. This should never happed.

2002-07-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Add support for THREAD_BIN_DIR.
	Include pkgIndex.tcl files from the blend build
	dir, the src dir, and the THREAD_BIN_DIR.
	* configure: Regen.
	* configure.in: Require the Thread package at
	configure time via the --with-thread option.